// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RequireNewPassword test render test render correctly 1`] = `
<Component
  theme={
    Object {
      "a": Object {},
      "actionRow": Object {},
      "button": Object {},
      "container": Object {},
      "formContainer": Object {},
      "formField": Object {},
      "formRow": Object {},
      "formSection": Object {},
      "hint": Object {},
      "input": Object {},
      "inputLabel": Object {},
      "photoPickerButton": Object {},
      "photoPlaceholder": Object {},
      "radio": Object {},
      "sectionBody": Object {},
      "sectionFooter": Object {},
      "sectionFooterPrimaryContent": Object {},
      "sectionFooterSecondaryContent": Object {},
      "sectionHeader": Object {},
      "signInButton": Object {},
      "signInButtonContent": Object {},
      "signInButtonIcon": Object {},
      "strike": Object {},
      "strikeContent": Object {},
    }
  }
>
  <Component
    theme={
      Object {
        "a": Object {},
        "actionRow": Object {},
        "button": Object {},
        "container": Object {},
        "formContainer": Object {},
        "formField": Object {},
        "formRow": Object {},
        "formSection": Object {},
        "hint": Object {},
        "input": Object {},
        "inputLabel": Object {},
        "photoPickerButton": Object {},
        "photoPlaceholder": Object {},
        "radio": Object {},
        "sectionBody": Object {},
        "sectionFooter": Object {},
        "sectionFooterPrimaryContent": Object {},
        "sectionFooterSecondaryContent": Object {},
        "sectionHeader": Object {},
        "signInButton": Object {},
        "signInButtonContent": Object {},
        "signInButtonIcon": Object {},
        "strike": Object {},
        "strikeContent": Object {},
      }
    }
  >
    Change Password
  </Component>
  <Component>
    <Component
      autoFocus={true}
      key="password"
      name="password"
      onChange={[Function]}
      placeholder="New Password"
      theme={
        Object {
          "a": Object {},
          "actionRow": Object {},
          "button": Object {},
          "container": Object {},
          "formContainer": Object {},
          "formField": Object {},
          "formRow": Object {},
          "formSection": Object {},
          "hint": Object {},
          "input": Object {},
          "inputLabel": Object {},
          "photoPickerButton": Object {},
          "photoPlaceholder": Object {},
          "radio": Object {},
          "sectionBody": Object {},
          "sectionFooter": Object {},
          "sectionFooterPrimaryContent": Object {},
          "sectionFooterSecondaryContent": Object {},
          "sectionHeader": Object {},
          "signInButton": Object {},
          "signInButtonContent": Object {},
          "signInButtonIcon": Object {},
          "strike": Object {},
          "strikeContent": Object {},
        }
      }
      type="password"
    />
  </Component>
  <Component
    theme={
      Object {
        "a": Object {},
        "actionRow": Object {},
        "button": Object {},
        "container": Object {},
        "formContainer": Object {},
        "formField": Object {},
        "formRow": Object {},
        "formSection": Object {},
        "hint": Object {},
        "input": Object {},
        "inputLabel": Object {},
        "photoPickerButton": Object {},
        "photoPlaceholder": Object {},
        "radio": Object {},
        "sectionBody": Object {},
        "sectionFooter": Object {},
        "sectionFooterPrimaryContent": Object {},
        "sectionFooterSecondaryContent": Object {},
        "sectionHeader": Object {},
        "signInButton": Object {},
        "signInButtonContent": Object {},
        "signInButtonIcon": Object {},
        "strike": Object {},
        "strikeContent": Object {},
      }
    }
  >
    <Component
      theme={
        Object {
          "a": Object {},
          "actionRow": Object {},
          "button": Object {},
          "container": Object {},
          "formContainer": Object {},
          "formField": Object {},
          "formRow": Object {},
          "formSection": Object {},
          "hint": Object {},
          "input": Object {},
          "inputLabel": Object {},
          "photoPickerButton": Object {},
          "photoPlaceholder": Object {},
          "radio": Object {},
          "sectionBody": Object {},
          "sectionFooter": Object {},
          "sectionFooterPrimaryContent": Object {},
          "sectionFooterSecondaryContent": Object {},
          "sectionHeader": Object {},
          "signInButton": Object {},
          "signInButtonContent": Object {},
          "signInButtonIcon": Object {},
          "strike": Object {},
          "strikeContent": Object {},
        }
      }
    >
      <Component
        onClick={[Function]}
        theme={
          Object {
            "a": Object {},
            "actionRow": Object {},
            "button": Object {},
            "container": Object {},
            "formContainer": Object {},
            "formField": Object {},
            "formRow": Object {},
            "formSection": Object {},
            "hint": Object {},
            "input": Object {},
            "inputLabel": Object {},
            "photoPickerButton": Object {},
            "photoPlaceholder": Object {},
            "radio": Object {},
            "sectionBody": Object {},
            "sectionFooter": Object {},
            "sectionFooterPrimaryContent": Object {},
            "sectionFooterSecondaryContent": Object {},
            "sectionHeader": Object {},
            "signInButton": Object {},
            "signInButtonContent": Object {},
            "signInButtonIcon": Object {},
            "strike": Object {},
            "strikeContent": Object {},
          }
        }
      >
        Change
      </Component>
    </Component>
    <Component
      theme={
        Object {
          "a": Object {},
          "actionRow": Object {},
          "button": Object {},
          "container": Object {},
          "formContainer": Object {},
          "formField": Object {},
          "formRow": Object {},
          "formSection": Object {},
          "hint": Object {},
          "input": Object {},
          "inputLabel": Object {},
          "photoPickerButton": Object {},
          "photoPlaceholder": Object {},
          "radio": Object {},
          "sectionBody": Object {},
          "sectionFooter": Object {},
          "sectionFooterPrimaryContent": Object {},
          "sectionFooterSecondaryContent": Object {},
          "sectionHeader": Object {},
          "signInButton": Object {},
          "signInButtonContent": Object {},
          "signInButtonIcon": Object {},
          "strike": Object {},
          "strikeContent": Object {},
        }
      }
    >
      <Component
        onClick={[Function]}
        theme={
          Object {
            "a": Object {},
            "actionRow": Object {},
            "button": Object {},
            "container": Object {},
            "formContainer": Object {},
            "formField": Object {},
            "formRow": Object {},
            "formSection": Object {},
            "hint": Object {},
            "input": Object {},
            "inputLabel": Object {},
            "photoPickerButton": Object {},
            "photoPlaceholder": Object {},
            "radio": Object {},
            "sectionBody": Object {},
            "sectionFooter": Object {},
            "sectionFooterPrimaryContent": Object {},
            "sectionFooterSecondaryContent": Object {},
            "sectionHeader": Object {},
            "signInButton": Object {},
            "signInButtonContent": Object {},
            "signInButtonIcon": Object {},
            "strike": Object {},
            "strikeContent": Object {},
          }
        }
      >
        Back to Sign In
      </Component>
    </Component>
  </Component>
</Component>
`;

exports[`RequireNewPassword test render test render correctly with required attributes 1`] = `
<Component
  theme={
    Object {
      "a": Object {},
      "actionRow": Object {},
      "button": Object {},
      "container": Object {},
      "formContainer": Object {},
      "formField": Object {},
      "formRow": Object {},
      "formSection": Object {},
      "hint": Object {},
      "input": Object {},
      "inputLabel": Object {},
      "photoPickerButton": Object {},
      "photoPlaceholder": Object {},
      "radio": Object {},
      "sectionBody": Object {},
      "sectionFooter": Object {},
      "sectionFooterPrimaryContent": Object {},
      "sectionFooterSecondaryContent": Object {},
      "sectionHeader": Object {},
      "signInButton": Object {},
      "signInButtonContent": Object {},
      "signInButtonIcon": Object {},
      "strike": Object {},
      "strikeContent": Object {},
    }
  }
>
  <Component
    theme={
      Object {
        "a": Object {},
        "actionRow": Object {},
        "button": Object {},
        "container": Object {},
        "formContainer": Object {},
        "formField": Object {},
        "formRow": Object {},
        "formSection": Object {},
        "hint": Object {},
        "input": Object {},
        "inputLabel": Object {},
        "photoPickerButton": Object {},
        "photoPlaceholder": Object {},
        "radio": Object {},
        "sectionBody": Object {},
        "sectionFooter": Object {},
        "sectionFooterPrimaryContent": Object {},
        "sectionFooterSecondaryContent": Object {},
        "sectionHeader": Object {},
        "signInButton": Object {},
        "signInButtonContent": Object {},
        "signInButtonIcon": Object {},
        "strike": Object {},
        "strikeContent": Object {},
      }
    }
  >
    Change Password
  </Component>
  <Component>
    <Component
      autoFocus={true}
      key="password"
      name="password"
      onChange={[Function]}
      placeholder="New Password"
      theme={
        Object {
          "a": Object {},
          "actionRow": Object {},
          "button": Object {},
          "container": Object {},
          "formContainer": Object {},
          "formField": Object {},
          "formRow": Object {},
          "formSection": Object {},
          "hint": Object {},
          "input": Object {},
          "inputLabel": Object {},
          "photoPickerButton": Object {},
          "photoPlaceholder": Object {},
          "radio": Object {},
          "sectionBody": Object {},
          "sectionFooter": Object {},
          "sectionFooterPrimaryContent": Object {},
          "sectionFooterSecondaryContent": Object {},
          "sectionHeader": Object {},
          "signInButton": Object {},
          "signInButtonContent": Object {},
          "signInButtonIcon": Object {},
          "strike": Object {},
          "strikeContent": Object {},
        }
      }
      type="password"
    />
    <Component
      key="given_name"
      name="given_name"
      onChange={[Function]}
      placeholder="Given Name"
      theme={
        Object {
          "a": Object {},
          "actionRow": Object {},
          "button": Object {},
          "container": Object {},
          "formContainer": Object {},
          "formField": Object {},
          "formRow": Object {},
          "formSection": Object {},
          "hint": Object {},
          "input": Object {},
          "inputLabel": Object {},
          "photoPickerButton": Object {},
          "photoPlaceholder": Object {},
          "radio": Object {},
          "sectionBody": Object {},
          "sectionFooter": Object {},
          "sectionFooterPrimaryContent": Object {},
          "sectionFooterSecondaryContent": Object {},
          "sectionHeader": Object {},
          "signInButton": Object {},
          "signInButtonContent": Object {},
          "signInButtonIcon": Object {},
          "strike": Object {},
          "strikeContent": Object {},
        }
      }
      type="text"
    />
    <Component
      key="family_name"
      name="family_name"
      onChange={[Function]}
      placeholder="Family Name"
      theme={
        Object {
          "a": Object {},
          "actionRow": Object {},
          "button": Object {},
          "container": Object {},
          "formContainer": Object {},
          "formField": Object {},
          "formRow": Object {},
          "formSection": Object {},
          "hint": Object {},
          "input": Object {},
          "inputLabel": Object {},
          "photoPickerButton": Object {},
          "photoPlaceholder": Object {},
          "radio": Object {},
          "sectionBody": Object {},
          "sectionFooter": Object {},
          "sectionFooterPrimaryContent": Object {},
          "sectionFooterSecondaryContent": Object {},
          "sectionHeader": Object {},
          "signInButton": Object {},
          "signInButtonContent": Object {},
          "signInButtonIcon": Object {},
          "strike": Object {},
          "strikeContent": Object {},
        }
      }
      type="text"
    />
  </Component>
  <Component
    theme={
      Object {
        "a": Object {},
        "actionRow": Object {},
        "button": Object {},
        "container": Object {},
        "formContainer": Object {},
        "formField": Object {},
        "formRow": Object {},
        "formSection": Object {},
        "hint": Object {},
        "input": Object {},
        "inputLabel": Object {},
        "photoPickerButton": Object {},
        "photoPlaceholder": Object {},
        "radio": Object {},
        "sectionBody": Object {},
        "sectionFooter": Object {},
        "sectionFooterPrimaryContent": Object {},
        "sectionFooterSecondaryContent": Object {},
        "sectionHeader": Object {},
        "signInButton": Object {},
        "signInButtonContent": Object {},
        "signInButtonIcon": Object {},
        "strike": Object {},
        "strikeContent": Object {},
      }
    }
  >
    <Component
      theme={
        Object {
          "a": Object {},
          "actionRow": Object {},
          "button": Object {},
          "container": Object {},
          "formContainer": Object {},
          "formField": Object {},
          "formRow": Object {},
          "formSection": Object {},
          "hint": Object {},
          "input": Object {},
          "inputLabel": Object {},
          "photoPickerButton": Object {},
          "photoPlaceholder": Object {},
          "radio": Object {},
          "sectionBody": Object {},
          "sectionFooter": Object {},
          "sectionFooterPrimaryContent": Object {},
          "sectionFooterSecondaryContent": Object {},
          "sectionHeader": Object {},
          "signInButton": Object {},
          "signInButtonContent": Object {},
          "signInButtonIcon": Object {},
          "strike": Object {},
          "strikeContent": Object {},
        }
      }
    >
      <Component
        onClick={[Function]}
        theme={
          Object {
            "a": Object {},
            "actionRow": Object {},
            "button": Object {},
            "container": Object {},
            "formContainer": Object {},
            "formField": Object {},
            "formRow": Object {},
            "formSection": Object {},
            "hint": Object {},
            "input": Object {},
            "inputLabel": Object {},
            "photoPickerButton": Object {},
            "photoPlaceholder": Object {},
            "radio": Object {},
            "sectionBody": Object {},
            "sectionFooter": Object {},
            "sectionFooterPrimaryContent": Object {},
            "sectionFooterSecondaryContent": Object {},
            "sectionHeader": Object {},
            "signInButton": Object {},
            "signInButtonContent": Object {},
            "signInButtonIcon": Object {},
            "strike": Object {},
            "strikeContent": Object {},
          }
        }
      >
        Change
      </Component>
    </Component>
    <Component
      theme={
        Object {
          "a": Object {},
          "actionRow": Object {},
          "button": Object {},
          "container": Object {},
          "formContainer": Object {},
          "formField": Object {},
          "formRow": Object {},
          "formSection": Object {},
          "hint": Object {},
          "input": Object {},
          "inputLabel": Object {},
          "photoPickerButton": Object {},
          "photoPlaceholder": Object {},
          "radio": Object {},
          "sectionBody": Object {},
          "sectionFooter": Object {},
          "sectionFooterPrimaryContent": Object {},
          "sectionFooterSecondaryContent": Object {},
          "sectionHeader": Object {},
          "signInButton": Object {},
          "signInButtonContent": Object {},
          "signInButtonIcon": Object {},
          "strike": Object {},
          "strikeContent": Object {},
        }
      }
    >
      <Component
        onClick={[Function]}
        theme={
          Object {
            "a": Object {},
            "actionRow": Object {},
            "button": Object {},
            "container": Object {},
            "formContainer": Object {},
            "formField": Object {},
            "formRow": Object {},
            "formSection": Object {},
            "hint": Object {},
            "input": Object {},
            "inputLabel": Object {},
            "photoPickerButton": Object {},
            "photoPlaceholder": Object {},
            "radio": Object {},
            "sectionBody": Object {},
            "sectionFooter": Object {},
            "sectionFooterPrimaryContent": Object {},
            "sectionFooterSecondaryContent": Object {},
            "sectionHeader": Object {},
            "signInButton": Object {},
            "signInButtonContent": Object {},
            "signInButtonIcon": Object {},
            "strike": Object {},
            "strikeContent": Object {},
          }
        }
      >
        Back to Sign In
      </Component>
    </Component>
  </Component>
</Component>
`;

exports[`RequireNewPassword test render test render nothing with hide 1`] = `""`;

exports[`RequireNewPassword test render test render nothing with incorrect authState 1`] = `""`;
